sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:8: error: not found: value c
		for (i<-a-2-c to 0 ) {
                            ^